--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
+    <h1>Studios Ghibli</h1>
     <script src="main.js" type="module"></script>
   </body>
 </html>
