tercera  prueba sara jueves

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,8 @@
   </head>
 
   <body>
-<<<<<<< HEAD
     <h1>Studio Ghibli</h1>
-=======
-    <h1>Studios Ghibli</h1>
->>>>>>> dc1137a08382b9dd02273ba97e19abe01c8b11b9
+    <h1>vamos de nuevo</h1>
     <script src="main.js" type="module"></script>
   </body>
 </html>
