prueba Syl 2 jueves

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Studio Ghibli</h1>
-    <h1>vamos de nuevo</h1>
+    <p>Sí se puede</p>
     <script src="main.js" type="module"></script>
   </body>
 </html>
