prueba#4 sara jueves

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Studio Ghibli</h1>
     <p>Sí se puede</p>
+    <h2>probemos con mas archivos</h2>
     <script src="main.js" type="module"></script>
   </body>
 </html>
