--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,13 @@
 
   <div id="root"> 
     <ul>
-      <li>Peli 1</li>
-        <dl itemscope itemtype="Studio Ghibli Inc.">
-          <dt>Title:</dt><dd itemprop="title">Castle in the Sky</dd>
+      <li itemscope itemtype="Studio Ghibli Inc."> 
+        <h3 itemprop="title">Castle in the Sky</h3>
+          <span>Title:</span><span itemprop="title"></span>
           <dt>Number:</dt><dd itemprop="num">025</dd>
           <dt>Rarity:</dt><dd itemprop="pokemon-rarity">normal</dd>
-        </dl>        
+      </li>       
+      
       <li>Peli 2</li>
     </ul>
   </div>
