--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
 <body>
   <header>
     <h1>Studios Ghibli</h1>
-    <!--<img src="images/header2.png" alt="">-->
-  </header>
+    <!--
+         <img src="images/header2.png" alt="">
+    -->
+    </header>
 
   <main>
     <label for="clean-buton">
