--- a/src/index.html
+++ b/src/index.html
@@ -9,24 +9,27 @@
 
 <body>
   <header>
-    <h1>Studio Ghibli</h1>
-  </header>
+    <h1>Studios Ghibli</h1>
+    <!--
+         <img src="images/header2.png" alt="">
+    -->
+    </header>
 
   <main>
-    <h2>Películas</h2>
+    <label for="clean-buton">
+      <button data-testid="button-clear">Limpiar filtros</button>
+    </label>
   </main>
 
   <div id="root"> 
-
+   <ul id="container"></ul>
   </div>
 
   <footer> 
-    <label for="clean-buton">
-      <button>Limpiar filtros</button>
-    </label>
+
     Desarrollado por Sara Ramírez y Sylvia Gómez
   </footer>
-  
+
   <script src="main.js" type="module"></script>
 </body>
 
