--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,16 @@
     -->
     </header>
 
-  <main>
-    <label for="clean-buton">
-      <button data-testid="button-clear">Limpiar filtros</button>
-    </label>
-  </main>
+  <main><h2></h2></main>
+<button data-testid="button-clear">Limpiar filtros</button>
+
+
 
   <div id="root"> 
-   <ul id="container"  ></ul>
+   <ul id="container"></ul>
   </div>
 
   <footer> 
-
     Desarrollado por Sara Ramírez y Sylvia Gómez
   </footer>
 
