--- a/src/info.html
+++ b/src/info.html
@@ -21,7 +21,7 @@
     </label>
   </main>
 
-  <div id="root"> 
+  <div itemscope itemtype="films" id="root"> 
    <ul id="containerP"></ul>
   </div>
 
