--- a/src/info.html
+++ b/src/info.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Data Lovers</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Data Lovers</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body>
-  <header>
-    <h1>Studios Ghibli</h1>
-    <!--
+  <body>
+    <header>
+      <h1>Studios Ghibli</h1>
+      <!--
          <img src="images/header2.png" alt="">
-    -->
-    </header>
+    --></header>
 
-  <main>
-    <label for="clean-buton">
-      <button data-testid="button-clear">Limpiar filtros</button>
-    </label>
-  </main>
+    <main>
+      <label for="clean-buton">
+        <button data-testid="button-clear">Limpiar filtros</button>
+      </label>
+    </main>
 
-  <div itemscope itemtype="films" id="root"> 
-   <ul id="containerP"></ul>
-  </div>
+    <div itemscope itemtype="films" id="root">
+    </div>
 
-  <footer> 
+    <footer>Desarrollado por Sara Ramírez y Sylvia Gómez</footer>
 
-    Desarrollado por Sara Ramírez y Sylvia Gómez
-  </footer>
-
-  <script src="main.js" type="module"></script>
-</body>
-
+    <script src="main.js" type="module"></script>
+  </body>
 </html>
