--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,15 @@
   <main><h2></h2></main>
 <button data-testid="button-clear">Limpiar filtros</button>
 
-
+<label>
+  <select data-testid="select-filter" name="director">
+    <option>Director</option>
+    <option>Producer</option>
+    <option>Release date</option>
+    <option>Rating score</option>
+  </select>
+</label>
+<label ></label>
 
   <div itemscope itemtype="films" id="root"> 
  
