--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,14 @@
 <button data-testid="button-clear">Limpiar filtros</button>
 
 <label>
-  <select data-testid="select-filter" name="director">
+  <select data-testid="select-filter" >
     <option>Director</option>
     <option>Producer</option>
     <option>Release date</option>
     <option>Rating score</option>
   </select>
 </label>
-<label ></label>
+<label for="director"></label>
 
   <div itemscope itemtype="films" id="root"> 
  
