--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
   </select>
 </label>
 <label for="director"></label>
+<label for="producer"></label>
+<label for="release_date"></label>
 
   <div itemscope itemtype="films" id="root"> 
  
