--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,11 @@
       <label for="rt_score">Rating score</label>
       <select name="rt_score" id="rt_score"></select>
 
+      <input type="radio" id="ascendent" value="ascendent" name="order">
+      <label for="ascendent">a-z</label>
+      <input type="radio" id="descendent" value="descendent" name="order">
+      <label for="descendent">z-a</label>
+
       <label for="button-clear"></label>
       <button data-testid="button-clear" id="button-clear">
         Limpiar filtros
