--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
       <label for="rt_score">Rating score</label>
       <select name="rt_score" id="rt_score"></select>
 
-      <input type="radio" id="ascendent" value="ascendent" name="order">
+      <input type="radio" id="ascendent" value="asc" name="sort-order" />
       <label for="ascendent">a-z</label>
-      <input type="radio" id="descendent" value="descendent" name="order">
+      <input type="radio" id="descendent" value="desc" name="sort-order" />
       <label for="descendent">z-a</label>
 
       <label for="button-clear"></label>
