--- a/src/info.html
+++ b/src/info.html
@@ -14,7 +14,7 @@
     --></header>
 
     <main>
-      <label for="clean-buton">
+      <label for="clean-button">
         <button data-testid="button-clear">Limpiar filtros</button>
       </label>
     </main>
