--- a/src/info.html
+++ b/src/info.html
@@ -19,8 +19,7 @@
       </label>
     </main>
 
-    <div itemscope itemtype="films" id="root">
-    </div>
+    <div itemscope itemtype="films" id="root"></div>
 
     <footer>Desarrollado por Sara Ramírez y Sylvia Gómez</footer>
 
