tarde del martes 26

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,8 @@
         Limpiar filtros
       </button>
 
+      <span id="stadistics">Total de películas: </span>
+
       <div itemscope itemtype="films" id="root"></div>
     </main>
     <footer>Desarrollado por Sara Ramírez y Sylvia Gómez</footer>
