--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Data Lovers</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Data Lovers</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body>
-  <header>
-    <h1>Studios Ghibli</h1>
-    <!--
-         <img src="images/header2.png" alt="">
-    -->
+  <body>
+    <header>
+      <h1>Studios Ghibli</h1>
     </header>
 
-  <main>
-    <label for="clean-buton">
-      <button data-testid="button-clear">Limpiar filtros</button>
-    </label>
-  </main>
+    <main>
+      <h2>Filter options</h2>
+      <label for="director">Director</label>
+      <select name="director" id="director"></select>
+      <label for="producer">Producer</label>
+      <select name="producer" id="producer"></select>
+      <label for="release_date">Release Date</label>
+      <select name="release_date" id="release_date"></select>
+      <label for="rt_score">Rating score</label>
+      <select name="rt_score" id="rt_score"></select>
 
-  <div id="root"> 
-   <ul id="container"></ul>
-  </div>
+      <input type="radio" id="ascendent" value="asc" name="sort-order" />
+      <label for="ascendent">a-z</label>
+      <input type="radio" id="descendent" value="desc" name="sort-order" />
+      <label for="descendent">z-a</label>
 
-  <footer> 
+      <label for="button-clear"></label>
+      <button data-testid="button-clear" id="button-clear">
+        Limpiar filtros
+      </button>
 
-    Desarrollado por Sara Ramírez y Sylvia Gómez
-  </footer>
+      <span id="stadistics">Total de películas: </span>
+
+      <div itemscope itemtype="films" id="root"></div>
+    </main>
+    <footer>Desarrollado por Sara Ramírez y Sylvia Gómez</footer>
 
   <script src="main.js" type="module"></script>
 </body>
