--- a/src/info.html
+++ b/src/info.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Data Lovers</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="estilos.css" />
   </head>
 
   <body>
