--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
 
       <label for="button-clear"></label>
       <button data-testid="button-clear" id="button-clear">
-        Limpiar filtros
+        Clean
       </button>
 
-      <span id="stadistics">Total de películas: </span>
+      <span id="stadistics"></span>
 
       <div itemscope itemtype="films" id="root"></div>
     </main>
