--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     </ul>
   </div>
   <div>
-    <span id="stadisticsTxt">FILMS</span><br>
+    <span id="stadisticsTxt">Total films: </span><br>
     <span id="stadistics">FILMS</span>
   </div>
     <div itemscope itemtype="films" id="root"></div>
