--- a/src/info.html
+++ b/src/info.html
@@ -8,15 +8,15 @@
 
   <body>
     <header>
-      <h1>Studios Ghibli</h1>
+      <a class="titulo">Studios Ghibli</a>
+      <a class="return" href="index.html">Return</a>
       <!--
-         <img src="images/header2.png" alt="">
-    --></header>
+         <img src="images/header2.png" alt="">-->
+      </header>
 
     <main>
-      <label for="clean-button">
-        <button data-testid="button-clear">Limpiar filtros</button>
-      </label>
+      
+      
     </main>
 
     <div itemscope itemtype="films" id="root"></div>
