--- a/src/info.html
+++ b/src/info.html
@@ -10,11 +10,8 @@
     <header>
       <a class="titulo">Studios Ghibli</a>
       <a class="return" href="index.html">Return</a>
-      <!--
-         <img src="images/header2.png" alt="">-->
       </header>
-
-    <main>
+    <main class="secondSheetContent">
       
       
     </main>
