--- a/src/info.html
+++ b/src/info.html
@@ -8,18 +8,17 @@
 
   <body>
     <header>
-      <a class="titulo">Studios Ghibli</a>
-      <a class="return" href="index.html">Return</a>
+        <a class="titulo">Studios Ghibli</a>
+        <a class="return" href="index.html">Return</a>
       </header>
-    <main class="secondSheetContent">
-      
-      
-    </main>
+    <main id="secondSheetContent"></main>
 
     <div itemscope itemtype="films" id="root"></div>
 
     <footer>Desarrollado por Sara Ramírez y Sylvia Gómez</footer>
 
     <script src="main.js" type="module"></script>
+
+
   </body>
 </html>
