--- a/src/index.html
+++ b/src/index.html
@@ -44,12 +44,12 @@
         </li>
       <li class="menuPrincipal3">
         <label for="button-clear"><button data-testid="button-clear" id="button-clear">Clean filters</button></label>
-      </li>     
+      </li>
+      <li class="totalFilms">Total films: </li>
+      <li>
+        <span id="stadistics"></span>
+      </li>
     </ul>
-  </div>
-  <div>
-    <span id="stadisticsTxt">Total films: </span><br>
-    <span id="stadistics">FILMS</span>
   </div>
     <div itemscope itemtype="films" id="root"></div>
   </main>
