--- a/src/info.html
+++ b/src/info.html
@@ -8,21 +8,17 @@
 
   <body>
     <header>
-      <h1>Studios Ghibli</h1>
-      <!--
-         <img src="images/header2.png" alt="">
-    --></header>
-
-    <main>
-      <label for="clean-button">
-        <button data-testid="button-clear">Limpiar filtros</button>
-      </label>
-    </main>
+        <a class="titulo">Studios Ghibli</a>
+        <a class="return" href="index.html">Return</a>
+      </header>
+    <main id="secondSheetContent"></main>
 
     <div itemscope itemtype="films" id="root"></div>
 
     <footer>Desarrollado por Sara Ramírez y Sylvia Gómez</footer>
 
     <script src="main.js" type="module"></script>
+
+
   </body>
 </html>
