tests pasando, excepto label de html

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,8 @@
           </ul>
         </li>
       <li class="menuPrincipal3">
-        <label for="button-clear"><button data-testid="button-clear" id="button-clear">Clean filters</button></label>
+        <label for="button-clear"></label>
+        <button data-testid="button-clear" id="button-clear">Clean filters</button>
       </li>
       <li class="totalFilms">Total films: </li>
       <li>
