--- a/src/info.html
+++ b/src/info.html
@@ -9,7 +9,7 @@
   <body>
     <header>
         <a class="titulo">Studios Ghibli</a>
-        <a class="return" href="index.html">Return</a>
+        <a class="return" href="index.html"><button>Return</button></a>
       </header>
     <main id="secondSheetContent"></main>
 
@@ -19,6 +19,6 @@
 
     <script src="main.js" type="module"></script>
 
-
+    
   </body>
 </html>
