--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,10 @@
       </li>
     </ul>
   </div>
+  <p class="instructions">Click or tap for more info</p>
     <div itemscope itemtype="films" id="root"></div>
   </main>
-    <footer>Desarrollado por Sara Ramírez y Sylvia Gómez</footer>
+    <footer>Developped by Sara Ramírez and Sylvia Gómez</footer>
   <script src="main.js" type="module"></script>
 </body>
 </html>
