--- a/src/info.html
+++ b/src/info.html
@@ -15,7 +15,7 @@
 
     <div itemscope itemtype="films" id="root"></div>
 
-    <footer>Desarrollado por Sara Ramírez y Sylvia Gómez</footer>
+    <footer>Developped by Sara Ramírez and Sylvia Gómez</footer>
 
     <script src="main.js" type="module"></script>
 
