--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,20 @@
         <li class="menuPrincipal">Filters
           <ul>
             <li>
-              <label for="director">Director: <select data-testid="select-filter" name="director" id="director"></select></label>
+              <label for="director">Director: </label>
+              <select data-testid="select-filter" name="director" id="director"></select>
             </li>
             <li>
-              <label for="producer">Producer: <select name="producer" id="producer"></select></label>
+              <label for="producer">Producer: </label>
+              <select name="producer" id="producer"></select>
             </li>
             <li>
-              <label for="release_date">Release Date: <select name="release_date" id="release_date"></select></label>
+              <label for="release_date">Release Date: </label>
+              <select name="release_date" id="release_date"></select>
             </li>
             <li>
-              <label for="rt_score">Rating score: <select name="rt_score" id="rt_score"></select></label>
+              <label for="rt_score">Rating score: </label>
+              <select name="rt_score" id="rt_score"></select>
             </li>
           </ul>
         </li>
