--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
   <p class="instructions">Click or tap for more info</p>
     <div itemscope itemtype="films" id="root"></div>
   </main>
-    <footer>Developped by Sara Ramírez and Sylvia Gómez</footer>
+    <footer>Developed by Sara Ramírez and Sylvia Gómez</footer>
   <script src="main.js" type="module"></script>
 </body>
 </html>
